--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 /* styles/globals.css */
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,7 +7,8 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Inter', sans-serif;
   background-color: #f4f4f4;
   color: #333;
+  padding: 2rem;
 }
